--- a/index.html
+++ b/index.html
@@ -57,6 +57,6 @@
 </body>
 
 <footer>
-     © July 2020 Md Irfan Amin Chowdury All rights reserved
+     © July 2020 Md Irfan Amin Chowdury All rights reserved.
 </footer>
 </html>
